# Navius

./: .cursorignore  .env.example  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  analyze_docs.sh  api_registry.json  build.rs  build.sh  config.example.yaml  deploy_production.sh  doc_validation_report.txt  mod-rules.mdc  prioritize_docs.sh  run.sh  run_dev.sh  run_server.sh  user_data.json
.cargo/: README.md  config.toml
.cursor/rules/: 001-workflow.mdc  020-roadmaps.mdc  021-error-tracking.mdc  023-mod-rules.mdc  024-dependency-management.mdc  040-no-legacy-code.mdc  999-date-formats.mdc  api-standards.mdc  available_instructions.md  core-transition.mdc  dependency-management.mdc  error-handling.mdc  error-tracking.mdc  git-rules.mdc  issues-generated-code.mdc  mod-rules.mdc  roadmaps.mdc  run-rule.mdc  server-info.mdc  test-coverage.mdc  test-examples.mdc  testing-guidance.mdc
.devtools/: README.md
.devtools/config/: markdownlint.json
.devtools/feature-analysis/: analyze_deps.py  analyze_features.sh  inventory.sh  inventory_features.py  metrics_optimization_plan.md  optimize_module.sh
.devtools/github/: PULL_REQUEST_TEMPLATE.md
.devtools/ide/: README.md
.devtools/scripts/: README.md  add_api.sh  build.sh  check_coverage.sh  coverage.sh  deploy_production.sh  fix-imports-naming.sh  fix_codebase.sh  generate_sqlx_cache.sh  install-hooks.sh  navigate.sh  pre-commit.sh  regenerate_api.sh  remove_example_code.sh  run_dev.sh  setup.sh  test_quality.sh  update_paths.sh  validate_api_models.sh  validate_docs.sh  validate_frontmatter.py  verify-structure.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: auth_feature_optimization.md  feature_flag_optimization.md  metrics_feature_optimization.md
.github/workflows/: docs-validation.yml  rust-tests.yml  rust.yml
.gitlab/issue_templates/: Feature.md
.sqlx/: query-2e197c3dcc957dbf5e67da9344319da56bd4ff773030e06c36a8c0e3a229b382.json  query-3f4a590305a99bdbf02e280d80ed4f6414f6772577262d4c1c440cd443de360f.json  query-4d76ca80e77f0bb39368fa25ab83665f42555ea0f4353afd648f14a91bc3c034.json  query-5931ba24545623edb672705462b0b801c0f1036cf44d28c758c8fdbc60285055.json  query-5d703da96815b53681dd036268d0e94f046870bc885875a03a9d9c52dd7d5835.json  query-61971cd9662048fe552ceefbdbce0f0390df0d6a255c87147c21ab2c321e33cd.json  query-760c38fc9ed1ba6e6934ccb4c25d9a85e60e0543084a94caede37608cdeb85bd.json  query-873be6f9c226f2cecdcd48d232567325afba177a51fec931d967711533ecbc66.json  query-a22fe31852647415c22a5c18fe04ed527935188c2ba40268dfe30286eab325e6.json  query-c25145908e8e914ee66193e91bb32b1c5548d78b4b728a6b35628ece2b17a280.json  query-d81d482a0eb3a62d729137435ddfbe7d293ebf1c09642f7de66a9d517c962c9e.json  query-ea2969c2211e1fd92611067b08d16631715b1dede36eafb0b04033abfb82aba7.json
11newdocs11/: MIGRATION-TRACKER.md  README.md  SUMMARY.md
11newdocs11/01_getting_started/: README.md  cli-reference.md  development-setup.md  first-steps.md  hello-world.md  installation.md  sample.md
11newdocs11/02_examples/: README.md  authentication-example.md  basic-application-example.md  cache-provider-example.md  configuration-example.md  custom-service-example.md  database-integration-example.md  database-service-example.md  dependency-injection-example.md  error-handling-example.md  graphql-example.md  health-service-example.md  logging-service-example.md  middleware-example.md  repository-pattern-example.md  rest-api-example.md  server-customization-example.md  spring-boot-comparison.md  two-tier-cache-example.md
11newdocs11/03_contributing/: CONTRIBUTING.md  README.md  code-of-conduct.md  contributing-guidelines.md  (+9 more)
bruno_collection/: GetData AuthRequired.bru  GetData.bru  GetPet.bru  GetPetRead.bru  GetPetService.bru  collection.bru
config/: README.md  api_registry.json  default.yaml  development.yaml  features.json  production.yaml  reliability.yaml
crates/navius-auth/: Cargo.toml
crates/navius-auth/src/: authorize.rs  basic.rs  error.rs  lib.rs  middleware.rs  providers.rs  token.rs  types.rs
crates/navius-core/: Cargo.toml  README.md
crates/navius-core/src/: config.rs  constants.rs  error.rs  lib.rs  types.rs  util.rs
crates/navius-http/: Cargo.toml  README.md
crates/navius-http/src/: client.rs  error.rs  lib.rs  middleware.rs  server.rs  util.rs
crates/navius-http/src/middleware/: cors.rs  logging.rs  mod.rs  request_id.rs  timeout.rs
docs/: @26-server-customization-system-guide.md  API_INTEGRATION.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SUMMARY.md  api_resource.md  api_resource_guide.md  api_resource_pattern.md  book.toml  feature-system.md  installation.md  postgresql_integration.md  project-restructuring-guide.md  security.md  test-implementation-template.md  testing-guidance.md  testing-prompt.md  testing-roadmap.md  testing_guide.md
migrations/: 001_create_users_table.sql  20240322000000_create_pets_table.sql
scripts/: add_api.sh  coverage.sh  generate_sqlx_cache.sh  pre-commit.sh  regenerate_api.sh  setup-hooks.sh  setup.sh  validate_docs.sh
src/: app.rs  cache.rs  core.rs  examples.rs  generated_apis.rs  lib.rs  main.rs  metrics.rs  test_imports.rs  tests.rs
tests/: README.md  api_client_integration_tests.rs  auth.rs  cli_command_tests.rs  cli_tests.rs  documentation_custom_templates_tests.rs  documentation_edge_cases_tests.rs  documentation_template_inheritance_tests.rs  documentation_template_tests.rs  documentation_tests.rs  feature_builder_tests.rs  feature_system_tests.rs  features_cli_args_tests.rs  features_cli_interactive_tests.rs  features_cli_main_tests.rs  features_cli_tests.rs  interactive_cli_tests.rs  lib.rs  router_integration_test.rs
workspace_migration/: README.md  progress.md
workspace_migration/examples/: Cargo.toml  README.md
workspace_migration/examples/crates/navius-core/: Cargo.toml
workspace_migration/examples/crates/navius-core/src/: error.rs  lib.rs
workspace_migration/examples/crates/navius-metrics/: Cargo.toml
workspace_migration/examples/crates/navius-metrics-prometheus/: Cargo.toml
(+1161 files in other folders)
