[package]
name = "navius-auth"
version = "0.1.0"
edition = "2021"
description = "Authentication and authorization framework for Navius"
license = "MIT OR Apache-2.0"
authors = ["James Moriarty <jamespaulmoriarty@gmail.com>"]
repository = "https://github.com/banyancomputer/navius"
documentation = "https://docs.rs/navius-auth"
keywords = ["auth", "authentication", "authorization", "identity", "security"]
categories = ["authentication", "web-programming"]

[features]
default = ["basic", "jwt", "http"]
basic = []
jwt = ["dep:jsonwebtoken", "sha2", "hex", "base64"]
oauth = ["dep:oauth2"]
http = ["dep:http"]
test-utils = []

[dependencies]
navius-core = { path = "../navius-core" }
navius-http = { path = "../navius-http", features = ["server"] }

# Core dependencies
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
async-trait = "0.1.88"
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6.2", optional = true }
tracing = "0.1.41"
chrono = { version = "0.4.40", features = ["serde"] }
rand = "0.9.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
hex = { version = "0.4.3", optional = true }
sha2 = { version = "0.10.8", optional = true }
base64 = { version = "0.22.1", optional = true }
http = { version = "1.3.1", optional = true }
tokio = { version = "1.44.1", features = ["rt"] }

# Optional dependencies
jsonwebtoken = { version = "9.3.1", optional = true }
oauth2 = { version = "5.0.0", optional = true }

[dev-dependencies]
tokio = { version = "1.44.1", features = ["rt", "macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
once_cell = "1.21.3"
mockito = "1.7.0"
wiremock = "0.6.3"
assert_matches = "1.5.0"
test-context = "0.4.1"
fake = { version = "4.2.0", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"] 