[package]
name = "navius-core"
version = "0.1.0"
edition = "2024"
description = "Core functionality for the Navius framework"
license = "Apache-2.0"
repository = "https://github.com/Evan-Coleman/Navius"
readme = "README.md"

# Dependencies section uses workspace inheritance
[dependencies]
# Core dependencies from workspace
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
lazy_static = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

# Development dependencies
[dev-dependencies]
mockito = "1.7.0"
proptest = "1.5.0"
fake = { version = "4.2.0", features = ["derive", "chrono", "uuid"] }
test-context = "0.4.1"
assert_matches = "1.5.0"
once_cell = "1.21.3"
mockall = "0.13.1"

# The core crate has minimal feature flags
[features]
default = []
test-utils = []
